Fix T99880: no node timing for frames in node groups